--- a/index.html
+++ b/index.html
@@ -140,10 +140,14 @@
         <!--Yet To add-->
         <!--Yet To add-->
         <a href="" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project" />
+          <img
+            class="project-image"
+            src="images/coming_soon.jpg"
+            alt="project"
+          />
           <p class="project-title">
             <span class="code">&lt;</span>
-            Tic Tac Toe Game
+            The Burger App
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
@@ -170,10 +174,10 @@
         <p>How do you take your coffee?</p>
       </div>
       <div class="contact-links">
-        <!--facebook link-->
+        <!--facebook 
         <a href="" target="_blank" class="btn contact-details"
           ><i class="fab fa-facebook-square"></i> Facebook</a
-        >
+        >-->
         <!--Github Link-->
         <a
           id="profile-link"
@@ -182,10 +186,10 @@
           class="btn contact-details"
           ><i class="fab fa-github"></i> GitHub</a
         >
-        <!--Twitter Link-->
+        <!--Twitter Link
         <a href="" target="_blank" class="btn contact-details"
           ><i class="fab fa-twitter"></i> Twitter</a
-        >
+        >-->
         <a href="mailto:milzbhakta@gmail.com" class="btn contact-details"
           ><i class="fas fa-at"></i> Send a mail</a
         >
