--- a/resume.html
+++ b/resume.html
@@ -38,7 +38,7 @@
                        <div class= "resume-address-bar col-md-3">
                            <a class= "resume-address-text" href = "mailto:milzbhakta@gmail.com">milzbhakta@gmail.com</a>
                            <p>+1 (647)-906-2333</p>
-                           <a class= "resume-address-text" href = "http://www.milanbhakta.dev">www.milanbhakta.tk</a>
+                           <a class= "resume-address-text" href = "http://www.milanbhakta.tk">www.milanbhakta.tk</a>
                        </div>
                    </div>
 
