--- a/index.html
+++ b/index.html
@@ -130,11 +130,15 @@
 
         <!--Yet To add-->
         <a href="" target="_blank" class="project project-tile">
-          <img class="project-image" src="" alt="project" />
+          <img
+            class="project-image"
+            src="images/coming_soon.jpg"
+            alt="project"
+          />
 
           <p class="project-title">
             <span class="code">&lt;</span>
-            Yet to Add
+            The Sport Coach
             <span class="code">&#47;&gt;</span>
           </p>
         </a>
