--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="#contact">Contact</a>
         </li>
         <li>
-          <a href="resume.html">Resume</a>
+          <a href="resume">Resume</a>
         </li>
       </ul>
     </nav>
