--- a/resume.html
+++ b/resume.html
@@ -17,7 +17,7 @@
                 <div class= "resume-body">
                     <div class= "row close-body">
                         <div class= "col-md-12">
-                            <a href="index.html">
+                            <a href="index">
                                     <i class="close icon text-danger"></i>
                             </a>
                         </div>
